--- a/PetPlayUI/src/app/components/header/header.component.html
+++ b/PetPlayUI/src/app/components/header/header.component.html
@@ -1,3 +1,20 @@
-<p>
-  header works!
-</p>
+<div id="header">
+  <div class="container">
+  
+    <!-- Logo -->
+      <div id="logo">
+         <!-- <img src="images/logoBig.jpg" height="70">-->
+         <h1><a href="#">PetPlay</a></h1>
+      </div>
+      
+    <!-- Nav -->	
+    <nav id="nav">
+      <ul>
+        <li><a [routerLink]='["/main"]'>Главная</a></li>
+        <li><a href="about.html">О нас</a></li>
+        <li><a [routerLink]='["/contacts"]'>Контакты</a></li>
+        <li><a [routerLink]='["/login"]'>Мой кабинет</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
