--- a/PetPlayUI/src/app/components/header/header.component.html
+++ b/PetPlayUI/src/app/components/header/header.component.html
@@ -14,6 +14,7 @@
         <li><a href="about.html">О нас</a></li>
         <li><a [routerLink]='["/contacts"]'>Контакты</a></li>
         <li><a [routerLink]='["/login"]'>Мой кабинет</a></li>
+        <li *ngIf="authService.isUserLogined()" style="cursor: pointer"><a (click)="logOut()">Выйти</a></li>
       </ul>
     </nav>
   </div>
