--- a/PetPlayUI/src/app/components/profile/profile.component.html
+++ b/PetPlayUI/src/app/components/profile/profile.component.html
@@ -23,5 +23,17 @@
       </mat-expansion-panel-header>
       <app-my-friends></app-my-friends>
     </mat-expansion-panel>
+
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          My toys
+        </mat-panel-title>
+        <mat-panel-description>
+          Manage your toys
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <app-my-toys></app-my-toys>
+    </mat-expansion-panel>
   </mat-accordion>
 </div>
