--- a/PetPlayUI/src/app/components/dialogs/my-pets/my-pets.component.html
+++ b/PetPlayUI/src/app/components/dialogs/my-pets/my-pets.component.html
@@ -10,6 +10,11 @@
     <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="kind">
+    <th mat-header-cell *matHeaderCellDef> Kind </th>
+    <td mat-cell *matCellDef="let element"> {{element.kind}} </td>
+  </ng-container>
+
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let element" style="cursor: pointer">
@@ -31,6 +36,10 @@
   
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Breed" [(ngModel)]="breed" name="breed">
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Kind" [(ngModel)]="kind" name="kind">
     </mat-form-field>
   <br/>
     <button mat-stroked-button color="primary" (click)="addNewPet()">Add</button>
