--- a/PetPlayUI/src/app/app.component.html
+++ b/PetPlayUI/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
+<div style="margin-bottom: 50px">
+    <app-header></app-header>
+</div>
 <router-outlet></router-outlet>
 <ngx-loading-bar></ngx-loading-bar>
