--- a/PetPlayUI/src/app/components/dialogs/my-pets/my-pets.component.html
+++ b/PetPlayUI/src/app/components/dialogs/my-pets/my-pets.component.html
@@ -5,14 +5,14 @@
     <td mat-cell *matCellDef="let element"> {{element.nickname}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="breed">
-    <th mat-header-cell *matHeaderCellDef> Breed </th>
-    <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
-  </ng-container>
-
   <ng-container matColumnDef="kind">
     <th mat-header-cell *matHeaderCellDef> Kind </th>
     <td mat-cell *matCellDef="let element"> {{element.kind}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="breed">
+    <th mat-header-cell *matHeaderCellDef> Breed </th>
+    <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
@@ -35,13 +35,15 @@
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Breed" [(ngModel)]="breed" name="breed">
+      <input matInput placeholder="Kind" [(ngModel)]="kind" name="kind">
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Kind" [(ngModel)]="kind" name="kind">
+      <input matInput placeholder="Breed" [(ngModel)]="breed" name="breed">
     </mat-form-field>
   <br/>
+    <p style="color: red; font-size: 14pt" *ngIf="errorText">{{errorText}}</p>
+
     <button mat-stroked-button color="primary" (click)="addNewPet()">Add</button>
     <button mat-stroked-button color="warn" (click)="close()" mat-dialog-close style="margin-left: 10px">Exit</button>
   </form>
