--- a/PetPlayUI/src/app/components/dialogs/register-toy-dialog/register-toy-dialog.component.html
+++ b/PetPlayUI/src/app/components/dialogs/register-toy-dialog/register-toy-dialog.component.html
@@ -1,8 +1,10 @@
 <h2 mat-dialog-title>Register new toy here</h2>
 <form class="example-form">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="YoyId from package" [(ngModel)]="toyId" name="toyId">
+    <input matInput placeholder="ToyId from package" [(ngModel)]="toyId" name="toyId">
   </mat-form-field>
 <br/>
   <button mat-stroked-button color="primary" (click)="addNewToy()">Register</button>
+  <button mat-stroked-button color="warn" (click)="exit()" style="margin-left: 5px">Exit</button>
 </form>
+<p style="color: red; font-size: 14pt" *ngIf="errorText">{{errorText}}</p>
