--- a/PetPlayUI/src/app/components/login/login.component.html
+++ b/PetPlayUI/src/app/components/login/login.component.html
@@ -7,6 +7,8 @@
     <input type="password" matInput placeholder="Password" [(ngModel)]="password">
   </mat-form-field>
 
+  <p style="color: red; font-size: 14pt" *ngIf="errorText">{{errorText}}</p>
+
   <button mat-raised-button color="primary" (click)="logIn()">Login</button>
   <button mat-raised-button color="primary" (click)="navigateToRegister()" style="margin-left: 10px">Register</button>
 </div>
