--- a/PetPlayUI/src/app/components/my-toys/my-toys.component.html
+++ b/PetPlayUI/src/app/components/my-toys/my-toys.component.html
@@ -16,6 +16,13 @@
     <td mat-cell *matCellDef="let element"> {{element.model}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let element" style="cursor: pointer"> 
+      <i class="material-icons" style="margin-top: 8px" (click)="deleteToy(element.id)">clear</i> 
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedOwnToysColumns"></tr>
   <tr class="element-row" 
       mat-row 
@@ -50,4 +57,7 @@
       [(class.selected)]="row.toy === selectedToy"
       (click)="selectGrantedToy(row)"></tr>
 </table>
-<button mat-raised-button color="accent" class="" style="margin-top: 10px">Connect to toy</button>
+<p style="color: red; font-size: 14pt" *ngIf="connectionError">{{connectionError}}</p>
+<div style="width: 200px; margin: auto">
+  <button mat-raised-button color="accent" class="" style="margin-top: 10px;" (click)="connectToToy()">Connect to toy</button>
+</div>
