--- a/PetPlayUI/src/app/components/profile/profile.component.css
+++ b/PetPlayUI/src/app/components/profile/profile.component.css
@@ -1,9 +1,37 @@
-.cont {
-    border: 1px solid black;
-    width: 700px;
-    height: 400px;
-    margin: auto;
-    margin-left: 300px;
-    margin-top: 100px;
+/*.cont {
+    width: 960px;
     position: absolute;
+    margin: 100px auto;
+    margin-left: 400px;
+    line-height: 1.4em;
+    border: 1px solid black;
+}*/
+
+.cont {
+    width: 960px;
+    height: 650px;
+
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto
 }
+
+@media only screen and (max-width: 479px){
+    .cont { width: 90%; margin-left: 0 }
+}
+
+/*.cont {
+    width: 960px;
+    margin: 100px auto;
+    margin-top: 150px;
+    line-height: 1.4em;
+    border: 1px solid black;
+}
+
+@media only screen and (max-width: 479px){
+    .cont { width: 90%; margin-left: 0 }
+}*/
