--- a/PetPlayUI/src/app/components/main/main.component.html
+++ b/PetPlayUI/src/app/components/main/main.component.html
@@ -1,8 +1,9 @@
-<div id="main">
+  <div id="main">
   <div class="container">
   
-    <img src="../../../assets/img/Pets.jpg" alt="Pets" width="100%"/>
+    <!--<img src="../../../assets/img/Pets.jpg" alt="Pets" width="100%"/>-->
     
+    <img src="./assets/img/Pets.jpg" alt="Pets" width="100%"/>
     <h1>PetPlay</h1>
     <p>
       В настоящее время из-за напряженного и плотного графика люди стали меньше времени уделять своим питомцам.
