--- a/PetPlayUI/src/app/components/contacts/contacts.component.html
+++ b/PetPlayUI/src/app/components/contacts/contacts.component.html
@@ -1,5 +1,5 @@
 <div id="main">
-  <div class="container">
+  <div class="container" style="margin-top: 100px">
           
             
     <h1>Как с нами связаться</h1>
