--- a/PetPlayUI/src/app/components/profile/profile.component.css
+++ b/PetPlayUI/src/app/components/profile/profile.component.css
@@ -17,7 +17,8 @@
     left: 0;
     right: 0;
 
-    margin: auto
+    margin: auto;
+    margin-top: 100px;
 }
 
 @media only screen and (max-width: 479px){
